# 42header-python

./: 42header.py  README.md  default.nix  pyproject.toml
src/header42/: __init__.py  constants.py  header.py
