[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "header42"
version = "1.0.0"
description = "A tool for generating and updating 42 school-style headers in source code files"
readme = "README.md"
authors = [
    { name = "Kate Jullien", email = "kate@juke.fr" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["42", "header", "source code", "formatting"]
dependencies = []
requires-python = ">=3.7"

[project.scripts]
header42 = "header42.header:main"

[tool.hatch.build.targets.wheel]
packages = ["src/header42"]
